--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     ]
   },
   "dependencies": {
+    "@fontsource/poppins": "^4.5.8",
     "lint-staged": "^13.0.3",
     "next": "12.2.2",
     "react": "18.2.0",
