--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "dependencies": {
     "@fontsource/poppins": "^4.5.8",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "ethers": "^5.5.2",
     "lint-staged": "^13.0.3",
     "next": "12.2.2",
     "react": "18.2.0",
