--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "lint-staged": "^13.0.3",
     "next": "12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.33.1"
   },
   "devDependencies": {
     "@types/node": "^18.0.6",
